# Radiation-cooling-and-heating-calculation

./: ANALYSIS.md  CHANGELOG.md  README.md  README_BUILD.md  README_WEB_PLATFORM.md  RadiationCalc copy.spec  build_exe.bat  build_exe.ps1  main.py  main_Qt.py  main_v39.py  main_v39.spec  notice.json
core/: __init__.py  calculations.py  config.py  era5_rc_tool.py  heat_balance.py  hvac_system.py  physics.py  plots.py  simulation_engine.py  spectrum.py  theoretical.py  weather_data.py
default/: 0-10RH.txt  1.xlsx  AM1.5.xlsx  Wavelength.csv  config.ini  config.ini.bak  use-高温.txt  反射率.txt  发射率.txt  计算与文章发表声明.txt  透过率.txt  高温发射率.txt
docs/: 用户手册.md  蒸发潜热计算分析报告.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
gui/: config_editor.py  dialogs.py  emissivity_cloud.py  era5_tool_dialog.py  file_processor.py  i18n.py  main_window.py  subwindows.py  threads.py  (+3 more)
mie-scattering/: README.md  pyproject.toml  requirements.txt
mie-scattering/backend/app/: __init__.py  main.py  models.py  runner.py
mie-scattering/backend/app/simulation/: __init__.py  fast_solver.py  geometry.py  integrated_solvers.py  materials.py  meep_adapter.py  meep_solver.py  mie.py  scan_defaults.py  solver_limits.py  solver_router.py
mie-scattering/backend/tests/: test_api.py  test_fast_solver.py  test_models.py
mie-scattering/docs/: project_architecture.md  solver_matrix.md
mie-scattering/frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json
mie-scattering/frontend/src/: main.jsx  styles.css
(+315 files in other folders)
